Metadata for newly added Flatpak repo are not pulled without GNOME Software restart
Description of problem:
When a new Flathub repository is added, its metadata should be automatically pulled and its content displayed in GNOME Software. Unfortunately, this does not happen and GS needs to be manually killed and restarted to trigger the new metadata download.
Version-Release number of selected component (if applicable):
gnome-software-3.30.6-1.fc29.x86_64
How reproducible:
Every time.
Steps to Reproduce:
- Add Flathub repo using GNOME Software: https://flatpak.org/setup/Fedora/
- Close and re-open GNOME Software (without killing it).
Actual results:
Metadata for Flathub are not pulled and displayed until the gnome-software process is manually killed and restarted.
Expected results:
Metadata for Flathub are pulled and displayed.
Edited by Daniel Rusek