flatpak: Invalidate xmlb cache when adding / removing remotes

This ensures that we pick up the newly available apps immediately.

Fixes: https://gitlab.gnome.org/GNOME/gnome-software/issues/586